fixed profile off center?

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -298,6 +298,7 @@
     .myProfile {
         margin-left: auto;
         margin-right: auto;
+        justify-content: center
     }
 
     .infoBoxes {
